--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
+bin/ 
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
@@ -30,3 +30,4 @@ bin/
 
 *.class
 tempCodeRunnerFile.java
+**/.cph/
